updating the submit feature

--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h1>Results</h1>
+            <h1 class="results">Holidays</h1>
           </div>
           <!-- Create div col-sm-3 with children h2 and ul>li to list all the holidays for that month -->
         </div>
