dynamic heading for country and year

--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
       <div class="overlay-light"></div>
       <div class="container">
         <div class="row">
-          <div class="col-12">
+          <div class="col-12 text-center mb-5">
             <h1 class="results">Holidays</h1>
           </div>
           <!-- Create div col-sm-3 with children h2 and ul>li to list all the holidays for that month -->
