updating script and index

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <!-- Top Nav Start -->
     <nav class="navbar navbar-dark bg-primary">
       <a class="navbar-brand">Holidays in Other Places</a>
-      <form class="form-inline">
+      <!-- <form class="form-inline">
         <input
           class="form-control mr-sm-2"
           type="search"
@@ -26,7 +26,7 @@
         <button class="btn btn-outline-light my-2 my-sm-0" type="submit">
           Search
         </button>
-      </form>
+      </form> -->
     </nav>
     <!-- Top Nav End -->
     <!-- Header Start -->
@@ -38,18 +38,21 @@
         <p class="lead">
           Explore the World and Celebrate Holidays in other places.
         </p>
-        <hr class="my-4" />
+        <!-- <hr class="my-4" />
         <p>
           It uses utility classes for typography and spacing to space content
           out within the larger container.
         </p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a> -->
       </div>
     </div>
     <!-- Header End -->
     <!-- Start Form for selecting the country -->
     <div class="container section__form my-5 py-5">
       <form id="selectForm">
+        <p class="italic text-center">
+          Please refresh the browser before making a new selection.
+        </p>
         <div class="form-group">
           <label for="countryCode">Select the Country</label>
           <select class="form-control" id="countryCode">
